# mp_arena_rs

./: Cargo.toml  test.sh
.cargo/: config.toml
src/: camera_controller.rs  channels.rs  client.rs  game.rs  input.rs  main.rs  messages.rs  player.rs  player_controller.rs  remote_state.rs  remoteplayer.rs  remoteplayer_controller.rs  server.rs
src/rendering/: mod.rs  player.rs
