[package]
name = "mp_arena_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
bevy_ggrs = { version = "0.14.*", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.8.*", features = ["ggrs"] }
bytemuck = "1.14.0"
clap = { version = "4.4.11", features = ["derive"] }
ggrs = "0.10.0"

[dependencies.bevy]
version = "0.12.*"
default-features = true

[target.'cfg(not(target_family = "wasm"))'.dependencies.bevy]
version = "0.12.*"
default-features = true
features = ["dynamic_linking"]
