[package]
name = "mp_arena_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy_renet = "0.0"
rand = "0.8"
clap = { version = "4", features = ["derive"] }