[package]
name = "mp_arena_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy_renet = { version= "0.0.*", features = ["serde"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
renet = "0.0.14"
serde = "1.0.193"
bincode = "1.3.3"
